--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
     <center>
     <img src="images/SportyBet.jpg" alt="" srcset="" width="100px" style="border-radius: 50%; margin-top: 5px;"> 
-    <h3 style="color: #999;">SportyBet Balnce Adder 2023</h3>
+    <h3 style="color: #999;">SportyBet++ 2024</h3>
     <p style="color: #999;">Version: Pro</p>
 </center>
 
