--- a/next.html
+++ b/next.html
@@ -11,7 +11,7 @@
     <script src="resources/index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <meta name="theme-color" content="#E41827">
-    <title>SBA 2023 - Betting</title>
+    <title>SBA 2024</title>
 </head> 
 <body>
     <div class="con-me">
