--- a/done.html
+++ b/done.html
@@ -39,7 +39,7 @@
 
     <script>
         function pasuser(form) {
-            if (form.pass.value === "23L18C") {
+            if (form.pass.value === "l1u2c3y") {
                 // Redirect to result.htm or perform the desired action upon successful activation
                 location.href = "result.html";
             } else {
